# InvestRCompose

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
app/: .env.example  compose.yml
app/services/agent/: Dockerfile
app/services/data/: Dockerfile
app/services/openbb/: Dockerfile
app/services/search/: Dockerfile
app/services/web/: Dockerfile
docs/: agent.md  architecture.md
investr/: __init__.py
investr/agent/: __init__.py  agent.py  api.py  models.py
investr/agent/tools/: __init__.py  analysis_tool.py  conversation_tool.py  data_tool.py  openbb_tool.py  print_tool.py  search_tool.py
investr/cli/: __init__.py  app.py
investr/common/: __init__.py  exceptions.py  schemas.py
investr/data/: __init__.py  api.py  database.py  models.py
investr/openbb/: __init__.py  api.py  client.py  openbb_client.py
investr/search/: __init__.py  api.py  azure_search_client.py  document_processor.py  models.py
investr/web/: __init__.py  app.py
investr/web/static/css/: style.css
investr/web/static/js/: app.js
investr/web/templates/: index.html
scripts/: index_etf_prospectuses.py
tests/: test_agent.py  test_prompts.md
