[project]
name = "investrcompose"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen-agentchat>=0.6.4",
    "autogen-ext[openai]>=0.6.4",
    "fastapi>=0.116.1",
    "flask>=3.1.1",
    "pip>=25.1.1",
    "pydantic>=2.11.7",
    "uvicorn>=0.35.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [ "D", "F", "FAST", "I", "N", ]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.4",
]
