[project]
name = "investrcompose"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen-agentchat>=0.6.4",
    "autogen-ext[openai]>=0.6.4",
    "azure-search-documents>=11.5.0",
    "azure-identity>=1.19.0",
    "azure-core>=1.35.0",
    "beanie>=2.0.0",
    "fastapi>=0.115,<0.116",
    "flask>=3.1.1",
    "httpx>=0.27.0",
    "loguru>=0.7.3",
    "motor>=3.7.1",
    "openai>=1.58.1",
    "openbb>=4.4.5",
    "pip>=25.1.1",
    "pydantic>=2.11.7",
    "pypdf>=5.1.0",
    "uvicorn>=0.34.2,<0.35.0",
    "python-dotenv>=1.1.1",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [ "D", "F", "FAST", "I", "N", ]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.4",
]
